--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "body-parser": "1.6.6",
     "cookie-parser": "1.3.2",
     "csurf": "1.5.0",
-    "errorhandler": "^1.1.1",
+    "errorhandler": "1.1.1",
     "express": "4.8.1",
-    "express-session": "^1.7.6",
+    "express-session": "1.7.6",
     "jade": "1.5.0",
     "less-middleware": "1.0.4",
-    "method-override": "^2.1.3",
+    "method-override": "2.1.3",
     "mongoskin": "1.4.4",
-    "morgan": "^1.2.3",
-    "serve-favicon": "^2.1.1"
+    "morgan": "1.2.3",
+    "serve-favicon": "2.1.1"
   }
 }
